[tool.poetry]
name = "gold-trading-bot"
version = "0.1.0"
description = "Multi-timeframe gold trading alert bot"

[tool.poetry.dependencies]
python = "^3.11"
MetaTrader5 = "*"
python-telegram-bot = "*"
requests = "*"
beautifulsoup4 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api
