[project]
name = "telegram-bot-python"
version = "0.1.0"
description = "Telegram bot for gold trading alerts"
authors = [{ name = "aeither", email = "36173828+aeither@users.noreply.github.com" }]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "MetaTrader5>=5.0.37",
    "python-telegram-bot>=20.3,<21",
    "requests>=2.31.0,<3",
    "beautifulsoup4>=4.12.2,<5",
    "python-dotenv>=1.2.1,<2"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false
